[package]
name = "yewlma"
version = "0.1.0"
authors = ["Bytebuddha <pmg41494@protonmail.com>"]
edition = "2018"

[features]
default = ["full"]
full = ["yew", "yewtil", "yew-router", "paginator"]

[dependencies]
serde = "1.0.115"
derive_more = "0.99.9"
paginator = { optional = true, version = "0.2.0" }
yew = { optional = true, git = "https://github.com/yewstack/yew" }
yewtil = { optional = true, git = "https://github.com/yewstack/yew", features = ["pure"] }
yew-router = { optional = true, git = "https://github.com/yewstack/yew" }
